modify index.html file

--- a/about.html
+++ b/about.html
@@ -45,8 +45,10 @@
                 <div class="card-body">
                     <img src="images/SP6.jpg" alt="" class="card-img-top">
                     <h5 class="card-title">Myself</h5>
-                    <p>Hi, I am <b>Shetu Chowdhury</b>. I love to gain my goal and be happy with my decision. I am friendly and hardworking person. Love to spend time with my family and friends. And I want to be a happy person and to keep happy other people around me. Trying to develop my skill on web developing side. I would like to learn some language (E.g English, Chinese, Italian & Russian). Travelling, gaming & watching movies are pleasure for me. And I really want to know about different cultures of our country.</p>
-                    <a href="readMore" class="btn btn-success">Read More.....</a>
+                    <div class="collapse text-left" id="myself">
+                        <p>Hi, I am <b>Shetu Chowdhury</b>. I love to gain my goal and be happy with my decision. I am friendly and hardworking person. Love to spend time with my family and friends. And I want to be a happy person and to keep happy other people around me. Trying to develop my skill on web developing side. I would like to learn some language (E.g English, Chinese, Italian & Russian). Travelling, gaming & watching movies are pleasure for me. And I really want to know about different cultures of our country.</p>
+                    </div>
+                    <a href="" class="btn btn-success" data-toggle="collapse" data-target="#myself">Read More</a>
                 </div>
 
             </div>
@@ -59,8 +61,10 @@
                 <div class="card-body">
                     <img src="images/FM.jpg" alt="" class="card-img-top">
                     <h5 class="card-title">My Family</h5>
-                    <p class="card-text">My mother is a one of the best mother in this world  and she always support me. I have three loving brothers. They are very caring and concern about me and I am very lucky to become a sister of three loving brothers. My two elder brothers are married and I have a cute niece in my family. Now she is the younger family member in my home and we are really blessed for the beautiful gift from Allah.</p>
-                    <a href="" class="btn btn-success">Read More.....</a>
+                    <div class="collapse text-left" id="family">
+                        <p class="card-text">My mother is a one of the best mother in this world  and she always support me. I have three loving brothers. They are very caring and concern about me and I am very lucky to become a sister of three loving brothers. My two elder brothers are married and I have a cute niece in my family. Now she is the younger family member in my home and we are really blessed for the beautiful gift from Allah.</p>
+                    </div>
+                        <a href="" class="btn btn-success" data-toggle="collapse" data-target="#family">Read More</a>
                 </div>
             </div>
 
@@ -73,8 +77,10 @@
                 <div class="card-body">
                     <img src="images/fnd.jpg" alt="" class="card-img-top">
                     <h5 class="card-title">My Friends</h5>
-                    <p class="card-text">I have lots of lovely friends. Now I really miss them and when we manage time we meet each other  and spend very memorable and special time.</p>
-                    <a href="" class="btn btn-success">Read More.....</a>
+                    <div class="collapse text-left" id="friend">
+                        <p class="card-text">I have lots of lovely friends. Now I really miss them and when we manage time we meet each other  and spend very memorable and special time.</p>
+                    </div>
+                    <a href="" class="btn btn-success" data-toggle="collapse" data-target="#friend">Read More</a>
                 </div>
             </div>
 
