--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
                 <div class="card-body">
                     <img src="images/m.png" alt="" class="card-img-top">
                     <h5 class="card-title">My Mission</h5>
-                    <p>Now I am doing a training course for <b>Web Application Development –PHP</b>. And I want to learn more about <b>Web Application Development</b> by using PHP which I can use for my future career growth.</p>
-                    <a href="readMore" class="btn btn-success">Read More.....</a>
+                    <div class="collapse text-left" id="objective">
+                    <p>Now I am doing a training course for <b>Web Application Development –PHP</b>. And I want to learn more about <b>Web Application Development</b> by using PHP which I can use for my future career growth.</p></div>
+                    <a href="" class="btn btn-success"  data-toggle="collapse" data-target="#objective">Read More</a>
+
                 </div>
 
             </div>
@@ -59,8 +61,9 @@
                 <div class="card-body">
                     <img src="images/v.png" alt="" class="card-img-top">
                     <h5 class="card-title">My Vision</h5>
-                    <p class="card-text">I want to be a well known web application developer. For gaining my goal I try to give my best effort. And I am working on it. I want to be expert on my work.</p>
-                    <a href="" class="btn btn-success">Read More.....</a>
+                    <div class="collapse text-left" id="vision">
+                    <p class="card-text">I want to be a well known web application developer. For gaining my goal I try to give my best effort. And I am working on it. I want to be expert on my work.</p></div>
+                    <a href="" class="btn btn-success"  data-toggle="collapse" data-target="#vision">Read More</a>
                 </div>
             </div>
 
@@ -73,6 +76,7 @@
                 <div class="card-body">
                     <img src="images/d.png" alt="" class="card-img-top">
                     <h5 class="card-title">My Dream</h5>
+                    <div class="collapse text-left" id="dream">
                     <pre class="card-text">I have lots of dreams……
     1. To be a well known <b>Web Application Developer</b>.
     2. Be a hacker.
@@ -82,8 +86,8 @@
     6. Wants to be a perfect happy person.
     7. Wants to help poor, uneducated people for their better life.
     8. And when getting old, i want to live in village with my green garden.
-                    </pre>
-                    <a href="" class="btn btn-success">Read More.....</a>
+                    </pre></div>
+                    <a href="" class="btn btn-success"  data-toggle="collapse" data-target="#dream">Read More</a>
                 </div>
             </div>
 
