--- a/portfolio.html
+++ b/portfolio.html
@@ -44,13 +44,15 @@
 
                 <div class="card-body">
                     <h5 class="card-title"><b>About myself:</b></h5>
+                    <div class="collapse text-left" id="am">
                     <p>
-                        <b>Shetu Chowdhury</b>
-                        Address       : House 09, Road 04, Nikunjo 02, Khilkhet.
-                        Contact Number: +8801672268919
-                        Email         : shetuchowdhury@hotmail.com, shetu09chowdhury@gmail.com
+                        <b>Shetu Chowdhury</b><br/>
+                        Address       : House 09, Road 04, Nikunjo 02, Khilkhet.<br/>
+                        Contact Number: +8801672268919<br/>
+                        Email         : shetuchowdhury@hotmail.com, shetu09chowdhury@gmail.com<br/>
                     </p>
-                    <a href="" class="btn btn-success">Read More.....</a>
+                    </div>
+                    <a href="" class="btn btn-success"  data-toggle="collapse" data-target="#am">Read More</a>
                 </div>
 
             </div>
@@ -62,8 +64,10 @@
 
                 <div class="card-body">
                     <h5 class="card-title"><b>Career Objective: </b></h5>
-                    <p>Looking for a challenging & growth oriented position for professional experience and willing to work in an environment where an opportunity of self-assessment and self-improvement in both individual and team based work that will help for further improvement.</p>
-                    <a href="" class="btn btn-success">Read More.....</a>
+                    <div class="collapse text-left" id="co">
+                        <p>Looking for a challenging & growth oriented position for professional experience and willing to work in an environment where an opportunity of self-assessment and self-improvement in both individual and team based work that will help for further improvement.</p>
+                    </div>
+                    <a href="" class="btn btn-success"  data-toggle="collapse" data-target="#co">Read More</a>
                 </div>
             </div>
 
@@ -75,13 +79,15 @@
 
                 <div class="card-body">
                     <h5 class="card-title"><b>Academic Qualifications: </b></h5>
+                    <div class="collapse text-left" id="aq">
                     <p>
-                        1. BSc in Computer Science & Engineering: Southeast University; Result: 3.40; Passing year: 2015
-                        2. Higher School Certificate [Science]: Sherpur Govt. College; Result: 4.20; Passing year: 2010
-                        3. Secondary school certificate [Science]: Bazitkhila high school; Result: 4.75; Passing year: 2008
+                        1. BSc in Computer Science & Engineering: Southeast University; Result: 3.40; Passing year: 2015<br/>
+                        2. Higher School Certificate [Science]: Sherpur Govt. College; Result: 4.20; Passing year: 2010<br/>
+                        3. Secondary school certificate [Science]: Bazitkhila high school; Result: 4.75; Passing year: 2008<br/>
 
                     </p>
-                    <a href="" class="btn btn-success">Read More.....</a>
+                    </div>
+                    <a href="" class="btn btn-success"  data-toggle="collapse" data-target="#aq">Read More</a>
 
                 </div>
             </div>
@@ -248,8 +254,10 @@
 
                 <div class="card-body">
                     <h5 class="card-title"><b>Research:</b></h5>
-                    <p>Virtual Speech and Language Therapy for Autistic Child.</p>
-                    <a href="" class="btn btn-success">Read More.....</a>
+                    <div class="collapse text-left" id="res">
+                        <p>Virtual Speech and Language Therapy for Autistic Child.</p>
+                    </div>
+                    <a href="" class="btn btn-success"  data-toggle="collapse" data-target="#res">Read More</a>
 
                 </div>
             </div>
@@ -261,12 +269,13 @@
 
                 <div class="card-body">
                     <h5 class="card-title"><b>Project:</b></h5>
-                    <p>
-                        1. Multi-Level Tic Tac Toe Game for Android Platform.
-                        2. Strategic evaluation of a local company-Shah Cement.
-
-                    </p>
-                    <a href="" class="btn btn-success">Read More.....</a>
+                    <div class="collapse text-left" id="project">
+                        <p>
+                            1. Multi-Level Tic Tac Toe Game for Android Platform.<br/>
+                            2. Strategic evaluation of a local company-Shah Cement.
+                        </p>
+                    </div>
+                    <a href="" class="btn btn-success"  data-toggle="collapse" data-target="#project">Read More</a>
                 </div>
 
             </div>
@@ -278,13 +287,15 @@
 
                 <div class="card-body">
                     <h5 class="card-title"><b>Technical Skills:</b></h5>
-                    <p>Languages: Java, Flex, Bison, HTML, CSS, PHP.
-                        Operating System: Windows 7, Linux.
-                        Computer skill: MS office.
-                        Extracurricular Activity: part time Web developer & Graphic designer.
-                        Interest: Web browsing, Mailing, Watching Movies, cooking etc.
-                    </p>
-                    <a href="" class="btn btn-success">Read More.....</a>
+                    <div class="collapse text-left" id="ts">
+                        <p>Languages: Java, Flex, Bison, HTML, CSS, PHP.<br/>
+                            Operating System: Windows 7, Linux.<br/>
+                            Computer skill: MS office.<br/>
+                            Extracurricular Activity: part time Web developer & Graphic designer.<br/>
+                            Interest: Web browsing, Mailing, Watching Movies, cooking etc.<br/>
+                        </p>
+                    </div>
+                    <a href="" class="btn btn-success"  data-toggle="collapse" data-target="#ts">Read More</a>
                 </div>
             </div>
 
@@ -293,7 +304,7 @@
 
 </div>
 
-
+<br/>
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-3">
@@ -302,10 +313,12 @@
 
                 <div class="card-body">
                     <h5 class="card-title"><b>Achievements:</b></h5>
-                    <p>a. Many achievement in inter school indoor & outdoor games.
+                    <div class="collapse text-left" id="achivement">
+                        <p>a. Many achievement in inter school indoor & outdoor games.<br/>
                         b. 3rd Prize in inter school essay writing competition.
-                    </p>
-                    <a href="" class="btn btn-success">Read More.....</a>
+                        </p>
+                    </div>
+                    <a href="" class="btn btn-success"  data-toggle="collapse" data-target="#achivement">Read More</a>
 
                 </div>
             </div>
@@ -317,11 +330,13 @@
 
                 <div class="card-body">
                     <h5 class="card-title"><b>Other Activities:</b></h5>
-                    <p>
-                        a.Organized reunion party in school.
-                        b.Worked as a volunteer in School, College & University.
-                    </p>
-                    <a href="" class="btn btn-success">Read More.....</a>
+                    <div class="collapse text-left" id="oa">
+                        <p>
+                            a.Organized reunion party in school.<br/>
+                            b.Worked as a volunteer in School, College & University.
+                        </p>
+                    </div>
+                    <a href="" class="btn btn-success"  data-toggle="collapse" data-target="#oa">Read More</a>
                 </div>
 
             </div>
@@ -333,17 +348,18 @@
 
                 <div class="card-body">
                     <h5 class="card-title"><b>Working Experience:</b></h5>
-                    <p><b>Adiva Graphics </b>(Post Charting Associate since 6th September 2015 to 10th November 2017).
-                        Job Responsibilities:
-                        1. Charting with Heavy data sheet in MS excel and MS PowerPoint.
-                        2. Statistical analysis of data or survey.
-                        3. Document and data conversion.
-                        4. Survey Quality Checking.
-                        5. Data tab assurance.
-                        6. De-branding (Audio, Video, Image) and Ad transcripts.
-
-                    </p>
-                    <a href="" class="btn btn-success">Read More.....</a>
+                    <div class="collapse text-left" id="we">
+                        <p><b>Adiva Graphics </b>(Post Charting Associate since 6th September 2015 to 10th November 2017).<br/>
+                            Job Responsibilities:<br/>
+                            1. Charting with Heavy data sheet in MS excel and MS PowerPoint.<br/>
+                            2. Statistical analysis of data or survey.<br/>
+                            3. Document and data conversion.<br/>
+                            4. Survey Quality Checking.<br/>
+                            5. Data tab assurance.<br/>
+                            6. De-branding (Audio, Video, Image) and Ad transcripts.
+                        </p>
+                    </div>
+                    <a href="" class="btn btn-success"  data-toggle="collapse" data-target="#we">Read More</a>
                 </div>
             </div>
 
@@ -355,21 +371,23 @@
 
                 <div class="card-body">
                     <h5 class="card-title"><b>References:</b></h5>
-                    <p>
-                        1. Monirul Hasan
-                        Lceturer & Coordinator, Department of Computer Science & Engineering.
-                        Southeast University.
-                        Email: kmhasan@gmail.com
-                        Contact Number: +8801811936618
+                    <div class="collapse text-left" id="ref">
+                        <p>
+                            1. Monirul Hasan<br/>
+                            Lceturer & Coordinator, Department of Computer Science & Engineering.<br/>
+                            Southeast University.<br/>
+                            Email: kmhasan@gmail.com<br/>
+                            Contact Number: +8801811936618<br/>
+                        <br/>
+                            2. Md. Kamrul Hasan Chowdhury<br/>
+                            Lecturer, Department of Mathematics.<br/>
+                            Chittagong University of Engineering & Technology (CUET).<br/>
+                            Email: hhimadrii@gmail.com<br/>
+                            Contact Number: +8801816029599
 
-                        2. Md. Kamrul Hasan Chowdhury
-                        Lecturer, Department of Mathematics.
-                        Chittagong University of Engineering & Technology (CUET).
-                        Email: hhimadrii@gmail.com
-                        Contact Number: +8801816029599
-
-                    </p>
-                    <a href="" class="btn btn-success">Read More.....</a>
+                        </p>
+                    </div>
+                    <a href="" class="btn btn-success"  data-toggle="collapse" data-target="#ref">Read More</a>
                 </div>
 
             </div>
